# fefu-web-2025

./: .gitignore  README.md  pyproject.toml
assets/task-5/: auto-deploy-process.webm
deploy/gunicorn/: gunicorn.service
deploy/nginx/: fefu-lab.conf
deploy/postgres/: init.sql  pg_hba.conf
deploy/scripts/: deploy.fish
docs/: task-1.md  task-2.md  task-3.md  task-4.md  task-5.md
src/: manage.py
src/fefu_lab/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/fefu_lab/backends/: __init__.py  email.py
src/fefu_lab/forms/: __init__.py  course.py  enrollment.py  feedback.py  registration.py  student.py  teacher.py
src/fefu_lab/migrations/: 0001_initial.py  0002_remove_studentprofile_email_and_more.py  0002_remove_teacher_faculty_enrollment.py  0002_teacher.py  0002_user.py  0003_alter_course_deleted_at_alter_enrollment_deleted_at_and_more.py  0003_delete_user.py  0004_alter_studentprofile_user_alter_teacherprofile_user.py
src/fefu_lab/static/fefu_lab/: main.css  main.js  registration.js
src/fefu_lab/templates/fefu_lab/: 404.html  _course_list.html  _form_errors.html  _student_list.html  about.html  base.html  course_detail.html  feedback.html  (+12 more)
src/fefu_lab/tests/: __init__.py  feedback.py  registration.py
src/fefu_lab/views/: __init__.py  about.py  course.py  custom_404.py  feedback.py  index.py  profile.py  registration.py  student.py
src/polls/: models.py  views.py
src/polls/migrations/: 0001_initial.py  0002_rename_choise_choice.py  0003_rename_choise_text_choice_choice_text.py
src/web_2025/: asgi.py  settings.py  urls.py  wsgi.py
(+20 files in other folders)
