[project]
name = "web_2025"
version = "0.1.0"
description = "Educational project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-stubs>=5.2.7",
]

[tool.ruff]
ignore = [
    "CPY001",
    "D100", "D101", "D102", "D104", "D105", "D106",
    "DOC201",
    "RUF001", "RUF002", "RUF003"
]
