[project]
name = "web_2025"
version = "0.1.0"
description = "Educational project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "psycopg>=3.3.2",
]

[tool.ruff]
ignore = [
    "CPY001",
    "D100", "D101", "D102", "D104", "D105", "D106",
    "DOC201",
    "RUF001", "RUF002", "RUF003"
]
